[build-system]
requires = ["setuptools>=61.0","pyarrow>=10.0.1", "simplejson>=3.17.3", "confuse>=1.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dremio_client_eea"
version = "0.0.1"
authors = [
  { name="Bilbomatica", email="oesparza@bilbomatica.es" },
]
description = "Dremio client with fixed flight connection"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

